# hermes-lark-streaming

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SKILL.md  UPSTREAM_P1_PATCH_NOTES.md  __init__.py  __main__.py  conftest.py  feishu.py  flush.py  hermes_adapter.py  monitor.py  patch.py  plugin.py  plugin.yaml  pyproject.toml  setup.py  unavailable_guard.py
.deps/lark_oapi/: __init__.py  client.py
.deps/lark_oapi-1.6.8.dist-info/: METADATA  RECORD
.deps/lark_oapi/api/: __init__.py
.deps/lark_oapi/card/: action_handler.py
.deps/lark_oapi/channel/: __init__.py  _api_helpers.py  _coerce.py  bot_identity.py  channel.py  config.py  driver.py  errors.py  events.py  identity.py  types.py
.deps/lark_oapi/core/: const.py  json.py
.deps/lark_oapi/event/: dispatcher_handler.py
.deps/lark_oapi/ws/: client.py
.deps/pycryptodome-3.23.0.dist-info/: RECORD
.github/workflows/: hermes-integration-test.yml  sync-from-gitee.yml
.snow/plan/: port-openclaw-features.md
.workflow/: release-pipeline.yml
aowen/: __init__.py
assets/card_templates/: 01_streaming_placeholder.json  02_streaming_with_panel.json  03_streaming_with_tools.json  04_complete_simple.json  05_complete_with_tools.json  06_complete_with_reasoning.json  07_complete_error.json  08_cron_card.json  09_gateway_card.json  10_clarify_pending.json  11_clarify_submitted.json  12_clarify_confirmed.json  13_notify_sync.json
cardkit/: __init__.py  cards.py  elements.py  i18n.py  md.py  special.py  table.py  theme.py
config/: __init__.py  reader.py
controller/: __init__.py  core.py  linear_mixin.py  mixin.py
docs/: AGENT_GUIDE.md  CHANGELOG.archive.md  CHANGELOG.md  DESIGN-v1.2.0.md  ISSUES_TEMPLATE.md  PRD-v1.2.0.md  ROADMAP.md  SKILL.md  UPSTREAM_P0_PATCH_GUIDE.md  UPSTREAM_PATCH_ANALYSIS.md  roadmap.md
feishu/: __init__.py  client.py  guard.py
flush/: __init__.py  controller.py
hermes_lark_streaming/: __init__.py  __main__.py  cardkit.py  cardkit_cards.py  cardkit_elements.py  cardkit_i18n.py  cardkit_md.py  cardkit_special.py  config.py  controller.py  controller_linear_mixin.py  controller_mixin.py  feishu.py  flush.py  linear.py  linear_split.py  monkey_patch.py  monkey_patch_adapter.py  monkey_patch_callbacks.py  monkey_patch_gateway.py  patch.py  plugin.py  session.py  text.py  tooluse.py
hermes_lark_streaming/cardkit/: cards.py  elements.py  i18n.py  md.py  special.py
hermes_lark_streaming/controller/: core.py  linear_mixin.py  mixin.py
hermes_lark_streaming/patching/: __init__.py  adapter.py  gateway.py
hermes_lark_streaming/state/: __init__.py  linear_split.py  session.py
monitor/: __init__.py
patching/: __init__.py  adapter.py  callbacks.py  gateway.py  hermes_adapter.py  hooks.py
plugin/: __init__.py
scripts/: create_release.py  notify_feishu.py
state/: __init__.py  attachments.py  linear.py  linear_split.py  phase.py  session.py  tooluse.py
tests/: conftest.py  test_approval_card.py  test_callback_interception.py  test_cardkit.py  test_clarify_card.py  test_config.py  test_controller.py  test_diagnose.py  test_feishu_client.py  test_flush.py  test_gateway_card.py  test_header.py  test_linear.py  test_monkey_patch.py  test_new_features.py  test_patch.py  test_phase.py  test_text.py  test_tooluse.py  test_unavailable_guard.py  test_version.py
tests/e2e/: .env.example  __init__.py  conftest.py  framework.py  mock_feishu.py  test_e2e_full.py  test_e2e_header.py
tests/integration/: test_hermes_compat.py
(+2561 files in other folders)
